make it resmonsive

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="stylesheet.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost&family=Open+Sans&family=Poppins&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./navigation.css">
 
 </head>
 
 <body>
     <header class="infocontainer">
+
         <div class="headerinfo">
             <div class="location">
                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
@@ -50,7 +50,6 @@
                 <h5>+012 345 6789</h5>
             </div>
         </div>
-        </div>
     </header>
 
     <section class="navigation">
@@ -80,16 +79,6 @@
             <a href=""><img src="/fonts/Frame 35Linkedin.png" alt="linkedin"></a>
         </div>
     </section>
-
-    <!-- <section class="hover-show">
-        <div>
-            <h1>Lorem ipsum dolor sit amet.</h1>
-            <h1>Lorem ipsum dolor sit amet.</h1>
-            <h1>Lorem ipsum dolor sit amet.</h1>
-            <h1>Lorem ipsum dolor sit amet.</h1>
-            <h1>Lorem ipsum dolor sit amet.</h1>
-        </div>
-    </section> -->
     <section class="sliders">
         <div class="welcometo">
             <button>Welcome to Finanza</button>
@@ -150,13 +139,124 @@
                 </div>
             </div>
             <div class="available">
-                <div class="phone"><img src="fonts/phonephone.png" alt=""></div>
+                <div class="phone-icon"><img src="fonts/phonephone.png" alt=""></div>
                 <div class="icon">
                     <h4>24/7 Available</h4>
                     <p>Clita erat ipsum lorem sit sed stet duo justo</p>
                 </div>
             </div>
         </div>
+    </section>
+    <section class="statistics">
+        <div class="result">
+            <div class="happy-clients">
+                <img src="./fonts/happyuser.png" alt="">
+                <h1>1234</h1>
+                <p>Happy clients</p>
+                <img src="./fonts/Line 2.png" alt="">
+            </div>
+            <div class="proj-completed">
+                <img src="./fonts/Vectorcompleted.png" alt="">
+                <h1>1234</h1>
+                <p>Project Completed</p>
+                <img src="./fonts/Line 2.png" alt="">
+            </div>
+            <div class="dedicated-staff">
+                <img src="./fonts/Vectorstaff1.png" alt="">
+                <h1>1234</h1>
+                <p>Dedicated Staff</p>
+                <img src="./fonts/Line 2.png" alt="">
+            </div>
+            <div class="dedicated-staff2">
+                <img src="./fonts/Vectorsraff2.png" alt="">
+                <h1>1234</h1>
+                <p>Dedicated Staff</p>
+                <img src="./fonts/Line 2.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="why">
+        <div class="peope-choosing">
+            <button class="choosing-us"> Why Choosing Us! </button>
+            <h1>Few Reasons Why People Choosing Us!</h1>
+            <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
+                ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+            <button class="explore"> explore more</button>
+        </div>
+
+        <div class="reason1">
+            <div class="fast-execution">
+                <img src="fonts/reasons.png" alt="">
+                <h1>Fast Executions</h1>
+                <p>Clita erat ipsum et lorem et sit,sed stet lorem sit clita duo justo erat amet</p>
+                <img src="fonts/read more.png" alt="">
+            </div>
+            <div class="fast-execution-blue">
+                <img src="/fonts/whitereason.png" alt="">
+                <h1>Fast Executions </h1>
+                <p>Clita erat ipsum et lorem et sit,sed stet lorem sit clita duo justo erat amet</p>
+                <img src="/fonts/white-read-more.png" alt="">
+            </div>
+        </div>
+        <div class="third-reason">
+            <img src="/fonts/reasons.png" alt="">
+            <h1>Fast Executions </h1>
+            <p>Clita erat ipsum et lorem et sit,sed stet lorem sit clita duo justo erat amet</p>
+            <img src="/fonts/read more.png" alt="">
+        </div>
+
+    </section>
+
+    <section class="our-services">
+        <div class="services-header">
+            <button><img src="/fonts/ourservices.png" alt=""></button>
+            <h1>Awesome Financial Services For Business</h1>
+        </div>
+        <div class="services">
+            <div class="planing">
+                <button> <img src="/fonts/white- lines.png" alt=""> Financial Planing</button>
+                <button> <img src="fonts/blue-lines.png" alt=""> Financial Planing</button>
+                <button><img src="fonts/blue-lines.png" alt=""> Financial Planing</button>
+                <button><img src="fonts/blue-lines.png" alt=""> Financial Planing</button>
+            </div>
+            <img src="/fonts/tab-image.png" alt="">
+            <div class="experience">
+                <h1>25 Years Of Experience In Financial Support</h1>
+                <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat
+                    ipsum et lorem et sit, sed stet </p>
+                <div class="services-list">
+                    <h4>
+                        <img src="/fonts/smaller.png" alt="">
+                        Secured Loans
+                    </h4>
+                    <h4>
+                        <img src="/fonts/smaller.png" alt="">
+                        Credit Facilities
+                    </h4>
+                    <h4>
+                        <img src="/fonts/smaller.png" alt="">
+                        Cash Advanced
+                    </h4>
+                </div>
+                <button> <img src="/fonts/read-more.png" alt=""></button>
+            </div>
+        </div>
+    </section>
+    <section class="call-back">
+        <div class="get-in-touch">
+            <button> <img src="fonts/inTouch.png" alt=""> </button>
+            <h1>Request A Call-Back</h1>
+        </div>
+        <div class="name-email">
+            <input type="name" placeholder="Your Name">
+            <input type="email" placeholder="Ypur Email">
+        </div>
+        <div class="phone-number">
+            <input type="number" placeholder="Your Phone" name="phoneNumber">
+            <input type="subject" placeholder="Your Subject" name="yourSubject" id="">
+        </div>
+        <textarea name="message" id="" cols="55" rows="10"></textarea>
+        <button class="submit"></button>
     </section>
 </body>
 
