--- a/index.html
+++ b/index.html
@@ -97,24 +97,12 @@
                         erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
                 </div>
                 <div class="tabcomponent">
-                    <!-- <a href="./pages/s">story</a>
-                    <p class="story"> Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit.Aliqu diam
-                        amet diam et eos labore.
-                        Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et
-                        lorem et sit</p>
-                    <a href="./pages/mission/mission.html">Mission</a>
-                    <p class="Mission"> Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit.Aliqu diam
-                        amet diam et eos labore.
-
-                        Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et
-                        lorem et sit</p>
-                    <a href="./pages/vision/vision.html">Vission</a>
-                    <p class="vission"> Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit.Aliqu diam
-                        amet diam et eos labore.
-
-                        Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et
-                        lorem et sit</p> -->
+                    <button onclick="updateContent('story')">Story</button>
+                    <button onclick="updateContent('mission')">Mission</button>
+                    <button onclick="updateContent('vision')">Vision</button>
                 </div>
+
+                <h1 id="content"></h1>
             </div>
         </div>
     </section>
@@ -189,20 +177,20 @@
                 <img src="fonts/reasons.png" alt="">
                 <h1>Fast Executions</h1>
                 <p>Clita erat ipsum et lorem et sit,sed stet lorem sit clita duo justo erat amet</p>
-                <img src="fonts/read more.png" alt="">
+                <a> Read More <img src="/fonts/blue-vect.png" alt=""> </a>
             </div>
             <div class="fast-execution-blue">
                 <img src="/fonts/whitereason.png" alt="">
                 <h1>Fast Executions </h1>
                 <p>Clita erat ipsum et lorem et sit,sed stet lorem sit clita duo justo erat amet</p>
-                <img src="/fonts/white-read-more.png" alt="">
+                <a href="/"> Read More<img src="/fonts/white-vector.png" alt=""></a>
             </div>
         </div>
         <div class="third-reason">
             <img src="/fonts/reasons.png" alt="">
             <h1>Fast Executions </h1>
             <p>Clita erat ipsum et lorem et sit,sed stet lorem sit clita duo justo erat amet</p>
-            <img src="/fonts/read more.png" alt="">
+            <a href="/"> Read More <img src="/fonts/blue-vect.png" alt=""> </a>
         </div>
 
     </section>
@@ -251,7 +239,7 @@
         <form action="" class="form-container">
             <div class="name-email">
                 <input class="form-input" type="name" placeholder="Your Name">
-                <input class="form-input" type="email" placeholder="Ypur Email">
+                <input class="form-input" type="email" placeholder="Yur Email">
             </div>
             <div class="phone-number">
                 <input class="form-input" type="phone" placeholder="Your Phone" name="phoneNumber">
@@ -262,6 +250,34 @@
         </form>
 
     </section>
+    <footer>
+        <div class="footer-div">
+
+            <h1>Our Office</h1>
+            <p> 123 Street, New York, USA</p>
+            <p><a href="+012 345 67890">+012 345 67890 </a></p>
+            <p><a href="mailto:info@example.com">info@example.com</a></p>
+        </div>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <div class="newsletter"></div>
+
+    </footer>
+    <script src="main.js"></script>
 </body>
 
 </html>
