--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/styles/8ourservices.css">
     <link rel="stylesheet" href="/styles/9callback.css">
     <link rel="stylesheet" href="/styles/10footer.css">
+    <link rel="stylesheet" href="/styles/pageending.css">
 
 </head>
 
@@ -193,14 +194,14 @@
                     <a> Read More <img src="/fonts/blue-vect.png" alt="" class="vector"> </a>
                 </div>
                 <div class="fast-execution-blue">
-                    <img src="/fonts/whitereason.png" alt="" >
+                    <img src="/fonts/whitereason.png" alt="">
                     <h1>Fast Executions </h1>
                     <p>Clita erat ipsum et lorem et sit,sed stet lorem sit clita duo justo erat amet</p>
                     <a href="/"> Read More<img src="/fonts/white-vector.png" alt="" class="vector"></a>
                 </div>
             </div>
             <div class="third-reason">
-                <img src="/fonts/reasons.png" alt="" >
+                <img src="/fonts/reasons.png" alt="">
                 <h1>Fast Executions </h1>
                 <p>Clita erat ipsum et lorem et sit,sed stet lorem sit clita duo justo erat amet</p>
                 <a href="/"> Read More <img src="/fonts/blue-vect.png" alt="" class="vector"> </a>
@@ -228,7 +229,7 @@
                         ipsum et lorem et sit, sed stet </p>
                     <div class="services-list">
                         <h4>
-                            <img src="/fonts/smaller.png" alt="" >
+                            <img src="/fonts/smaller.png" alt="">
                             Secured Loans
                         </h4>
                         <h4>
@@ -244,30 +245,31 @@
                 </div>
             </div>
         </section>
-       
-        <div class="blue-white">
-        <section class="call-back">
-            <div class="get-in-touch">
-                <button> Get in Touch </button>
-                <h1>Request A Call-Back</h1>
-            </div>
-            <form action="" class="form-container">
-                <div class="name-email">
-                    <input class="form-input" type="name" placeholder="Your Name">
-                    <input class="form-input" type="email" placeholder="Yur Email">
-                </div>
-                <div class="phone-number">
-                    <input class="form-input" type="phone" placeholder="Your Phone" name="phoneNumber">
-                    <input class="form-input" type="subject" placeholder="Your Subject" name="yourSubject" id="">
-                </div>
-                <textarea name="message" id="textarea" cols="55" rows="10" placeholder="Message"></textarea>
-                <button class="submit"> Submit Now </button>
-            </form>
 
-        </section>
-    </div>
+        <div class="blue-white">
+            <section class="call-back">
+                <div class="get-in-touch">
+                    <button> Get in Touch </button>
+                    <h1>Request A Call-Back</h1>
+                </div>
+                <form action="" class="form-container">
+                    <div class="name-email">
+                        <input class="form-input" type="name" placeholder="Your Name">
+                        <input class="form-input" type="email" placeholder="Yur Email">
+                    </div>
+                    <div class="phone-number">
+                        <input class="form-input" type="phone" placeholder="Your Phone" name="phoneNumber">
+                        <input class="form-input" type="subject" placeholder="Your Subject" name="yourSubject" id="">
+                    </div>
+                    <textarea name="message" id="textarea" cols="55" rows="10" placeholder="Message"></textarea>
+                    <button class="submit"> Submit Now </button>
+                </form>
+
+            </section>
+        </div>
 
     </main>
+
     <footer>
         <div class="footer-div">
             <h1>Our Office</h1>
@@ -324,6 +326,10 @@
         </div>
 
     </footer>
+    <div class="page-ending">
+        <p>&copy; <a href="/">Your Site Name</a>, All Right Reserved.</p>
+        <p>Designed By <a href="#">HTML Codex</a> Distributed By ThemeWagon</p>
+    </div>
     <script src="main.js"></script>
 </body>
 
