--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="/styles/8ourservices.css">
     <link rel="stylesheet" href="/styles/9callback.css">
     <link rel="stylesheet" href="/styles/10footer.css">
-    <link rel="stylesheet" href="/styles/pageending.css">
 
 </head>
 
@@ -249,87 +248,156 @@
         <div class="blue-white">
             <section class="call-back">
                 <div class="get-in-touch">
-                    <button> Get in Touch </button>
+                    <button>Get in Touch</button>
                     <h1>Request A Call-Back</h1>
                 </div>
                 <form action="" class="form-container">
                     <div class="name-email">
-                        <input class="form-input" type="name" placeholder="Your Name">
-                        <input class="form-input" type="email" placeholder="Yur Email">
+                        <div>
+                            <input class="form-input" type="name" placeholder="Your Name" id="name" required />
+                            <span class="mail-message" id="nameError"></span>
+                        </div>
+
+                        <div class="valid">
+                            <input class="form-input" type="email" placeholder="Yur Email" required id="email" />
+                            <span class="mail-message" id="emailError"></span>
+                        </div>
                     </div>
                     <div class="phone-number">
-                        <input class="form-input" type="phone" placeholder="Your Phone" name="phoneNumber">
-                        <input class="form-input" type="subject" placeholder="Your Subject" name="yourSubject" id="">
-                    </div>
-                    <textarea name="message" id="textarea" cols="55" rows="10" placeholder="Message"></textarea>
-                    <button class="submit"> Submit Now </button>
-                </form>
+                        <div class="valid">
+                            <input class="form-input" type="tel" placeholder="Your Phone" name="phoneNumber"
+                                pattern="\+995\d{9}" id="phoneerror" required />
+                            <span class="phone-message" id="phoneError"></span>
+                        </div>
 
+                        <div class="valid">
+                            <input class="form-input" type="subject" placeholder="Your Subject" name="yourSubject"
+                                id="subject" required />
+                            <span class="subject-message" id="subjectError"></span>
+                        </div>
+                    </div>
+                    <div>
+                        <input name="message" id="textarea" cols="55" rows="10" placeholder="Message" required>
+                        <span class="subject-message" id="areaError"></span>
+                    </div>
+
+                    <button type="button" onclick="validateForm()">Submit Now</button>
+                </form>
             </section>
         </div>
 
     </main>
 
     <footer>
-        <div class="footer-div">
-            <h1>Our Office</h1>
-            <p> <img src="/fonts/Frame 15location-footer.png" alt=""> 123 Street, New York, USA</p>
-            <p><a href="+012 345 67890" target="_blank"><img src="/fonts/Vectorphone-footer.png" alt=""> +012 345 67890
-                </a></p>
-            <p><a href="mailto:info@example.com" target="_blank"> <img src="/fonts/Vectoremail-footer.png" alt="">
-                    info@example.com</a></p>
-            <div class="footer-socmedia">
-                <img src="/fonts/tweeter-footer.png" alt="">
-                <img src="/fonts/Frame 22youtube-footer.png" alt="">
-                <img src="/fonts/Frame 23facebook-footer.png" alt="">
-                <img src="/fonts/Frame 24linkdin-footer.png" alt="">
+        <div class="footer">
+            <div class="footer-div">
+                <h1>Our Office</h1>
+                <p>
+                    <img src="/fonts/Frame 15location-footer.png" alt="" />
+                    123 Street, New York, USA
+                </p>
+                <p>
+                    <a href="+012 345 67890" target="_blank">
+                        <img src="/fonts/Vectorphone-footer.png" alt="" />
+                        +012 345 67890
+                    </a>
+                </p>
+                <p>
+                    <a href="mailto:info@example.com" target="_blank">
+                        <img src="/fonts/Vectoremail-footer.png" alt="" />
+                        info@example.com
+                    </a>
+                </p>
+                <div class="footer-socmedia">
+                    <img src="/fonts/tweeter-footer.png" alt="" />
+                    <img src="/fonts/Frame 22youtube-footer.png" alt="" />
+                    <img src="/fonts/Frame 23facebook-footer.png" alt="" />
+                    <img src="/fonts/Frame 24linkdin-footer.png" alt="" />
+                </div>
+            </div>
+            <ul>
+                <li>
+                    <h1>Services</h1>
+                </li>
+                <li>
+                    <img src="/fonts/Vectorservices-vector.png" alt="" />
+                    <a href="">Financial Planing</a>
+                </li>
+                <li>
+                    <img src="/fonts/Vectorservices-vector.png" alt="" />
+                    <a href="">Cash Investment</a>
+                </li>
+                <li>
+                    <img src="/fonts/Vectorservices-vector.png" alt="" />
+                    <a href="">Financial Consultancy</a>
+                </li>
+                <li>
+                    <img src="/fonts/Vectorservices-vector.png" alt="" />
+                    <a href="">Business Loans</a>
+                </li>
+                <li>
+                    <img src="/fonts/Vectorservices-vector.png" alt="" />
+                    <a href="">Business Analysis</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <h1>Quick Links</h1>
+                </li>
+                <li>
+                    <img src="/fonts/Vectorservices-vector.png" alt="" />
+                    <a href="/">About Us</a>
+                </li>
+                <li>
+                    <img src="/fonts/Vectorservices-vector.png" alt="" />
+                    <a href="/">Contact Us</a>
+                </li>
+                <li>
+                    <img src="/fonts/Vectorservices-vector.png" alt="" />
+                    <a href="/">Our services</a>
+                </li>
+                <li>
+                    <img src="/fonts/Vectorservices-vector.png" alt="" />
+                    <a href="/">Terms & Condition</a>
+                </li>
+                <li>
+                    <img src="/fonts/Vectorservices-vector.png" alt="" />
+                    <a href="/">Support</a>
+                </li>
+            </ul>
+            <!-- <div class="newsletter">
+                    <h1><a href="">Newsletter</a></h1>
+                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <form action="">
+                        <input type="text" placeholder="Your Email">
+                        <button> SingUp </button>
+                    </form>
+                </div> -->
+            <div class="newsletter">
+                <h1><a href="">Newsletter</a></h1>
+                <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                <form action="">
+                    <div class="input-group">
+                        <input type="text" placeholder="Your Email" />
+                        <button type="submit">SignUp</button>
+                    </div>
+                </form>
             </div>
         </div>
-        <ul>
-            <li>
-                <h1>Services </h1>
-            </li>
-            <li><img src="/fonts/Vectorservices-vector.png" alt=""><a href=""> Financial Planing</a></li>
-            <li><img src="/fonts/Vectorservices-vector.png" alt=""><a href=""> Cash Investment</a></li>
-            <li><img src="/fonts/Vectorservices-vector.png" alt=""><a href=""> Financial Consultancy</a></li>
-            <li><img src="/fonts/Vectorservices-vector.png" alt=""><a href=""> Business Loans</a></li>
-            <li><img src="/fonts/Vectorservices-vector.png" alt=""><a href=""> Business Analysis</a></li>
 
-        </ul>
-        <ul>
-            <li>
-                <h1>Quick Links </h1>
-            </li>
-            <li><img src="/fonts/Vectorservices-vector.png" alt=""><a href="/"> About Us</a></li>
-            <li><img src="/fonts/Vectorservices-vector.png" alt=""><a href="/"> Contact Us</a></li>
-            <li><img src="/fonts/Vectorservices-vector.png" alt=""><a href="/"> Our services</a></li>
-            <li><img src="/fonts/Vectorservices-vector.png" alt=""><a href="/"> Terms & Condition</a></li>
-            <li><img src="/fonts/Vectorservices-vector.png" alt=""><a href="/"> Support</a></li>
-        </ul>
-        <!-- <div class="newsletter">
-            <h1><a href="">Newsletter</a></h1>
-            <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-            <form action="">
-                <input type="text" placeholder="Your Email">
-                <button> SingUp </button>
-            </form>
-        </div> -->
-        <div class="newsletter">
-            <h1><a href="">Newsletter</a></h1>
-            <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-            <form action="">
-                <div class="input-group">
-                    <input type="text" placeholder="Your Email">
-                    <button type="submit">SignUp</button>
-                </div>
-            </form>
+        <div class="page-ending">
+            <p>
+                &copy;
+                <a href="/">Your Site Name,</a>
+                All Right Reserved.
+            </p>
+            <p>
+                Designed By
+                <a href="#">HTML Codex</a>
+                Distributed By ThemeWagon
+            </p>
         </div>
-
     </footer>
-    <div class="page-ending">
-        <p>&copy; <a href="/">Your Site Name</a>, All Right Reserved.</p>
-        <p>Designed By <a href="#">HTML Codex</a> Distributed By ThemeWagon</p>
-    </div>
     <script src="main.js"></script>
 </body>
 
